Added fontawesome and updated styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <div class="mast-head">
     <label>Software AG Cloud Designer</label>
   </div>
-  <div id="react-container"></div>
+  <div class="theia-container" id="theia-container"></div>
 </div>
